# Cmake_Course

./: Exercise.one  README.md
Polymorphism/: CmakeLists.txt  c_cpp_properties.json
Polymorphism/app/: main.c
Polymorphism/inc/: CmakeLists.txt  Rectangle.h  shape.h
Polymorphism/src/: CmakeLists.txt  Rectangle.c  shape.c
Udemy_Cmake/: Cmake_Tutorial.md
Udemy_Cmake/Basic_Project_Structure/: CMakeLists.txt  main.cpp
Udemy_Cmake/Basic_Project_Structure/inc/: my_lib.h
Udemy_Cmake/Basic_Project_Structure/src/: my_lib.cpp
Udemy_Cmake/Hello_World/: CMakeLists.txt  main.cpp
Udemy_Cmake/Intermediate_Project_Structure/: CMakeLists.txt
Udemy_Cmake/Intermediate_Project_Structure/app/: CMakeLists.txt  main.cpp
Udemy_Cmake/Intermediate_Project_Structure/inc/: CMakeLists.txt
Udemy_Cmake/Intermediate_Project_Structure/src/: CMakeLists.txt  my_lib.cpp
